--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,19 +1,11 @@
-<% if @book.errors.any? %>
-  <div class="errors" >
-   <h3><%= @book.errors.count %>error prohibited this obj from being saved:</h3>
-  <% @book.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-  <% end %>
-   </div>
-<% end %>
-
 <div class='container px-5 px-sm-0'>
+  <%= render 'layouts/errors', obj: @book %>
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'users/info', user: current_user %>
       <h2 class="mt-3">New book</h2>
-      <%= render 'books/form', book: @book %>
+      <%= render 'form', book: @book %>
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
