--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,8 +11,12 @@
       <tr>
         <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
         <td><%= user.name %></td>
+        <td>フォロー数<%=user.followings.count%></td>
+        <td>フォロワー数<%=user.followers.count%></td>
         <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
-      </tr>
+        <td>
+          
+        </td>
     <% end %>
   </tbody>
 </table>
