--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,8 +8,24 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+   <tr>
+	  <th>Follows</th>
+	  <th><%= link_to user.followings.count,user_followings_path(user) %></th>
+  </tr>
+   <tr>
+	  <th>Followings</th>
+	  <th><%= link_to user.followers.count,user_followers_path(user) %></th>
+  </tr>
 </table>
 
 <div class='row'>
-  <%= link_to 'Edit',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+   <% if current_user != user %>
+            <% if current_user.following?(user) %>
+              <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+            <% else %>
+              <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+            <% end %>
+     <%else%>
+   <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+  <% end %>
 </div>
