--- a/app/views/notifications/_index.html.erb
+++ b/app/views/notifications/_index.html.erb
@@ -1,13 +1,29 @@
-<% visiter=notification.visiter %>
-<% post=notification.micropost %>
+<%visitor = notification.visitor%>
+<% visited = notification.visited%>
 
-<div class="user-view clearfix ">
-  <%= link_to user_path(notification.visiter) do %>
-    <%=  image_tag notification.visiter.image[:small].url, class:"user-thumb", style:"width: 60px;"%>
-  <% end %>
-  <%= notification_form(notification) %><span class="moderate-font"><%= " (#{time_ago_in_words(notification.created_at)}前)" %></span>
-  <br>
-  <% if !@comment.nil? %>
-    <p class="moderate-font"><%= @comment %></p>
-  <% end %>
-</div>
+     <%= link_to user_path(visitor) do%>
+
+        <%= attachment_image_tag(visitor, :profile_image, :fill, 100, 100, fallback: "no_image.jpg").to_s, class: "icon_mini"%>
+        <strong><%= visitor.name %><%= 'さんが'%><%end%></strong>
+
+      <% case notification.action%>
+        <% when 'followed' then%>
+          <%= "あなたをフォローしました"%>
+        <% when 'favorite' then%>
+          <%= link_to 'あなたの投稿', notification.book, style: "font-weight: bold;"%>
+          <%= "にいいねしました"%>
+        <% when 'book_comment' then%>
+          <% if notification.book.user_id == visited.id%>
+            <%= link_to "あなたの投稿", notification.book, style: "font-weight: bold;"%>
+          <% else %>
+
+            <%= link_to book_path(notification.book) do%>
+              <%= attachment_image_tag(user, :profile_image, :fill, 20, 20, fallback: "no_image.jpg"), class: "icon_mini" %>
+              <strong><%= notification.book.user.name + 'さんの投稿'%>
+            <% end %>
+              <%= "にコメントしました"%></strong>
+
+          <%= Comment.find_by(id: notification.book_comment_id)&.book_comment %>
+
+
+    <%= time_ago_in_words(notification.created_at).upcase%>
